<resources>
    <string name="app_name">Xin chào!</string>
    <string name="des">khong des</string>
    <string name="userName">Tên đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="save_pass_word">Lưu mật khẩu</string>
    <string name="login">Đăng nhập</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="contentDes">no</string>
    <string name="modifyBtn">Sửa</string>
    <string name="deleteBtn">Xóa</string>
    <string name="picture_input">Ảnh</string>
    <string name="input_image_url">Nhập url của ảnh</string>
    <string name="article_title">Tiêu đề của bài viết</string>
    <string name="article_content">Nội dung</string>
    <string name="article_title_label">Nhập tiêu đề bài viết ở đây</string>
    <string name="save">Lưu</string>
    <string name="deleteAll">Xóa hết</string>
    <string name="hello_user">Xin chào</string>
    <string name="login_failed">Thông tin đăng nhập sai rồi!</string>
    <string name="deleteArticleNotify">Đồng ý xóa nó không??</string>
    <string name="huy">Hủy</string>
    <string name="ok">OK</string>
    <string name="search_result">Kết quả tìm kiếm</string>
</resources>
