<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".AddArticle">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:layout_constraintTop_toTopOf="parent"
            android:background="#43A047"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:title="@string/hello_user"
            app:titleTextColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/picture_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_large"
            android:text="@string/picture_input"
            android:textSize="@dimen/default_font_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar" />

        <EditText
            android:id="@+id/picture_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_large"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:hint="@string/input_image_url"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_input"
            tools:ignore="LabelFor,TextFields"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_large"
            android:text="@string/article_title"
            android:textSize="@dimen/default_font_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/picture_url" />

        <EditText
            android:id="@+id/article_title_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_large"
            android:layout_marginTop="20dp"
            android:autofillHints=""
            android:background="@drawable/custom_edit_text"
            android:hint="@string/article_title_label"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_title"
            tools:ignore="LabelFor"
            tools:layout_editor_absoluteX="0dp" />

        <TextView
            android:id="@+id/article_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_large"
            android:text="@string/article_content"
            android:textSize="@dimen/default_font_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/article_title_input" />


        <HorizontalScrollView
            android:id="@+id/horizontal_view"
            app:layout_constraintTop_toBottomOf="@id/article_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonGroupEnd"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="700dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <in.nashapp.androidsummernote.Summernote
                    android:id="@+id/summernote"
                    android:layout_width="600dp"
                    android:layout_height="600dp"
                    android:layout_margin="@dimen/default_margin_large" />

            </LinearLayout>

        </HorizontalScrollView>


        <LinearLayout
            android:id="@+id/buttonGroupEnd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/default_margin_large"
            android:gravity="end"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontal_view">

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="1dp"
                android:background="@drawable/custom_save_btn"
                android:text="@string/save"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/deleteBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:background="@drawable/custom_delete_btn"
                android:text="@string/deleteAll"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
    
</ScrollView>