<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/transparent">

    <androidx.cardview.widget.CardView
        android:background="@android:color/transparent"
        app:cardCornerRadius="@dimen/card_radius"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_margin="@dimen/card_margin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/login_failed_txt_margin"
                android:text="@string/deleteArticleNotify"
                android:textAlignment="center"
                android:textSize="@dimen/login_failed_txtSize" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/cancelBtn"
                    android:layout_margin="@dimen/notifybtn_margin"
                    android:text="@string/huy"
                    android:layout_weight="1"
                    android:textSize="@dimen/default_font_size"
                    android:textColor="@android:color/white"
                    android:background="@drawable/custom_ok_confirm"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <Button
                    android:id="@+id/okBtn"
                    android:layout_margin="@dimen/notifybtn_margin"
                    android:text="@string/ok"
                    android:layout_weight="1"
                    android:textSize="@dimen/default_font_size"
                    android:textColor="@android:color/white"
                    android:background="@drawable/deletebtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>