<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <HorizontalScrollView
        android:id="@+id/oneArticleHorizontalScrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none"
        tools:ignore="UselessParent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/articleCardView"
                android:layout_width="580dp"
                android:layout_height="match_parent"
                app:cardBackgroundColor="@android:color/white"
                android:layout_marginEnd="2dp">

                <ImageView
                    android:id="@+id/articleImageVIew"
                    android:src="@drawable/logo"
                    android:layout_width="70dp"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/contentDes" />

                <TextView
                    android:id="@+id/articleTextView"
                    android:textColor="@android:color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="73dp"
                    android:textSize="14sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                app:cardBackgroundColor="@android:color/white"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/modifyBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/article_cardview_margin"
                        android:layout_marginTop="@dimen/article_cardview_margin"
                        android:layout_marginEnd="@dimen/article_cardview_margin"
                        android:layout_marginBottom="@dimen/article_cardview_margin"
                        android:backgroundTint="#FB8C00"
                        android:textColor="@android:color/white"
                        android:contentDescription="@string/contentDes"
                        android:text="@string/modifyBtn"
                        tools:ignore="ButtonStyle" />

                    <Button
                        android:id="@+id/deleteBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginStart="@dimen/article_cardview_margin"
                        android:layout_marginTop="@dimen/article_cardview_margin"
                        android:layout_marginEnd="@dimen/article_cardview_margin"
                        android:layout_marginBottom="@dimen/article_cardview_margin"
                        android:backgroundTint="#E53935"
                        android:contentDescription="@string/contentDes"
                        android:text="@string/deleteBtn"
                        android:textColor="@android:color/white"
                        tools:ignore="ButtonStyle" />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
        </LinearLayout>
    </HorizontalScrollView>
</LinearLayout>